test/fixtures/invalid-syntax/migrated_0251.js
x = { get __proto__() { }, __proto__: 43 }